--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,22 @@
 pbr>=0.6,!=0.7,<1.0
 argparse
 Babel>=1.3,<=1.3
-eventlet>=0.15.1,<=0.15.2
+cliff==1.7.0
+eventlet>=0.15.1,<=0.16.1
 greenlet>=0.3.2,<=0.4.2
 httplib2>=0.7.5,<=0.9
 iso8601>=0.1.9,<=0.1.10
-keystonemiddleware>=1.0.0,<1.4.0
+keystonemiddleware>=1.0.0,<1.1.0
 kombu>=2.5.0,<=3.0.7
 lxml>=2.3,<=3.3.3
 netaddr>=0.7.12,<=0.7.13
-oslo.config>=1.4.0,<=1.6.0 # Apache-2.0
+oslo.config>=1.4.0,<=1.9.3 # Apache-2.0
 oslo.db>=1.0.0,<1.1  # Apache-2.0
-oslo.i18n>=1.0.0,<=1.3.1 # Apache-2.0
-oslo.messaging>=1.4.0,<1.5.0
-oslo.utils>=1.0.0,<=1.2.1 # Apache-2.0
+oslo.i18n>=1.0.0,<=1.5.0 # Apache-2.0
+oslo.messaging>=1.4.0,<1.8.1
+oslo.middleware<=1.0.0
+oslo.serialization>=1.3.0,<1.4.0
+oslo.utils>=1.0.0,<=1.4.0 # Apache-2.0
 PasteDeploy>=1.5.0,<=1.5.2
 posix_ipc<=0.9.9
 pycrypto>=2.6,<=2.6.1
